--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -158,6 +158,7 @@
     position: absolute;
     top: 10px;
     left: 10px;
+    z-index: 10;
 }
 
 .btn-danger {
@@ -350,9 +351,9 @@
         opacity: 1;
     }
 
-    .post-box,
     .post-box {
         width: 90%;
+        margin-bottom: 80px;
     }
 
     /* .imgDiv {
