--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -112,7 +112,7 @@
         padding-bottom: 80px !important;
     }
     .search-row-box {
-        gap: 20px;
+        gap: 10px;
     }
 
 }
